# mediascraper

./: .gitignore  Cargo.toml  deploy.sh  readme.md  scraper.conf  z.html  z.py
.github/workflows/: main.yml
src/: main.rs
website/: home.html
website/static/: script.js  site.webmanifest  style.css
