[package]
name = "mediascraper"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
futures = "0.3.31"
htmlescape = "0.3.1"
kuchiki = "0.8.1"
lol_html = "2.6.0"
regex = "1.11.1"
reqwest = {version="0.12.23", features = ["blocking", "json"]}
scraper = "0.24.0"
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-test = "0.4.4"
