[package]
name = "mediascraper"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.9"
actix-web = "4.12.1"
regex = "1.12.2"
reqwest = {version="0.12.28", features = ["blocking", "json"]}
scraper = "0.25.0"
serde_json = "1.0.146"
tera = "1.20.1"
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"
